adding absolute path for travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ compiler:
 
 script:
 - chmod -x travisScript.sh
-- sudo docker run -v /cvmfs:/cvmfs -v $TRAVIS_BUILD_DIR:$TRAVIS_BUILD_DIR $DOCKER_CONTAINER travisScript.sh $TRAVIS_BUILD_DIR
+- sudo docker run -v /cvmfs:/cvmfs -v $TRAVIS_BUILD_DIR:$TRAVIS_BUILD_DIR $DOCKER_CONTAINER $TRAVIS_BUILD_DIR/travisScript.sh $TRAVIS_BUILD_DIR
 
 notifications:
   email: false
